# text-diffusion

./: .gitignore  Makefile  README.md  new.py  pyproject.toml
config/: config.toml
core/: config.py  factory.py
data/: dataloader.py
diffusion/: diffusion.py
model/: layers.py  model.py
scripts/: infer.py  train.py
trainer/: trainer.py
